css/style.css
body{
    font-family: 'Open Sans',sans-serif;
    background-color:#f5f5f5 ;
    
}
h1,h2,h4{
    font-family: 'PT Sans Narrow',sans-serif;
    text-transform: uppercase;
    font-weight: bold;
}
p{
    font-size: 15;
    line-height: 21px;
    
}
.btn{
    font-weight: 400;
}
.btn:hover{
    border: 1px solid #fff !important;
}

.navbar{
    background-color: #303030 !important;
    font-family: 'PT Sans Narrow',sans-serif;
    font-weight: 700;
    font-size: 15px;
}
.navbar a {
    color: #f2f2f2!important;
    opacity: .8;
}
.navbar a:hover{
    opacity: 1;
    background-color: #111111!important;
}

.navbarbottom{
    background-color: #303030 !important;
    font-weight: 700;
    font-size: 15px;
}
.social{
    font-size: 25px;
}
.navbarbottom a {
        opacity: .8;
}
.navbarbottom a:hover{
    opacity: 1;
    background-color: #ffffff!important;
}
.header{
    height: 50%;
    width: 100%;
    padding: 70px 0 4%;
    margin-top: 50px;
    margin-bottom: 0px !important; 
    background: linear-gradient(to bottom right, #dedce8, #f9f9f9,#1111);
    text-align: center;
    border-radius: 30px;
    
    
}
.header img{
     border-radius: 50%;
    height: 250px;
    width: 250px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 0px;
    
    
}
.navbarbottom{
    background-color: #f0f0f0 !important;
}
.row1{
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 0px;
}
p.intro{
font-size: 20px; 
    text-align: center;
    letter-spacing: 1px;
    
}

/*
 
Skills

*/
.skills {
    padding: 30px 0 50px ;
    text-align: center ! important;
    background-color: #f4f6f9;
    border-radius: 25px;
}
.skill-head{
      margin-bottom: 3%;
    font-size: 40px;
    font-family: courier;
}

.skills{
    background: linear-gradient(to bottom right,#1111 , #f9f9f9,#dedce8);
}
.skill-icon{
    background: linear-gradient(to bottom right, #1111, #f9f9f9,#1111);
    padding: 10px 0 ;
    border-radius: 30px 50px;
}
.icon{
  height: 80px !important ; 
    width : !important;  
}


/*
Experiences
*/
.exp{
    padding: 2% 0px 50px !important;
    text-align: center !important;
    background: linear-gradient(to bottom right, #1111,#f2f2f2, #dedce8);
    border-radius: 25px; 
    margin-bottom: 0%;
    
}
.exp p{
    padding-bottom: 10px;
}

.exp .place{
    padding: 20px;
    border: 1px solid #ccc;
    background-color: #f5f7f9;
    border-radius: 15px 50px;

}
.place li
{
    display: block;
    padding: 5px;
    font-size: 17px;
    text-align: left;
    color: #00111e;
}
.place h5{
    font-size: 18px;
}
.place h4
{
    color: #202123;
    font-weight: 600;
    font-size: 25px;
    font-family: Trebuchet MS;
}
.place .at{
    font-size: 25px;
    font-family: Courier New;
    
}

.place h3{
    font-size:35px; 
    font-weight: 600;
    text-decoration: underline;
    color: #001111;
    font-family: Comic Sans MS;
}

/*

contact us
*/

.contact{
    
    padding: 20px 0 55px;
    margin-top: 0px;
    margin-bottom: 1%;
    text-align: center;
    font-size: 18px;
       background: linear-gradient(to bottom right, #dedce8, #f9f9f9,#1111);
    border-radius: 30px;
    
    
}
.cont{
        background: linear-gradient(to bottom right, #1111, #f9f9f9,#1111);
    padding: 10px 0 20px;
    border-radius: 30px 50px;
    
}
.cont .fa{
    font-size: 30px;
    
}
.cont .fa-2x{
    letter-spacing: 15px; 
    color: #5c5d60;
}
.cont .fa-2x:hover{
    color: #110011;
    font-size: 38px;
}
.cont a{
    text-decoration: none;
}
.contact h4{
    font-size: 35px;
    font-family: courier
}
@media(max-width:600px) {
    .header{
    height: 50%;
    width: 100%;
    padding: 70px 0 80px;
    margin-top: 50px;
    margin-bottom: 70px;
    background-color: #f5f5f5;
    text-align: center;
    
    
}
.header img{
     border-radius: 50%;
    height: 175px;
    width: 175px;
    margin-left: auto;
    margin-right: auto;
    
    
}
p.intro{
font-size: 14px; 
    text-align: justify;
    letter-spacing: 1px;
}
h1{
    text-transform: uppercase;
    font-weight: bold;
    font-size: 27px;
}
}

